--- a/angular.json
+++ b/angular.json
@@ -43,6 +43,7 @@
                             "node_modules/jquery/dist/jquery.min.js",
                             "node_modules/slick-carousel/slick/slick.min.js"
                         ]
+
                     },
                     "configurations": {
                         "production": {
@@ -53,11 +54,12 @@
                                 },
                                 {
                                     "type": "anyComponentStyle",
-                                    "maximumWarning": "2kb",
-                                    "maximumError": "4kb"
+                                    "maximumWarning": "200kb",
+                                    "maximumError": "200kb"
                                 }
                             ],
                             "outputHashing": "all"
+
                         },
                         "development": {
                             "optimization": false,
@@ -98,9 +100,15 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.css"
+                            "src/styles.css",
+                            "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+                            "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
+                            "node_modules/animate.css/animate.min.css"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "node_modules/jquery/dist/jquery.min.js",
+                            "node_modules/slick-carousel/slick/slick.min.js"
+                        ]
                     }
                 }
             }
